editar textos en servicios

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                 </svg>
                 <i class="bx bxl-dribbble"></i>
               </div>
-              <h4><a href="">Diseño a personalizado</a></h4>
+              <h4><a href="">Diseño personalizado</a></h4>
               <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
             </div>
           </div>
