--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@
 
         <div class="section-title">
           <h2>Info</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
         <div class="row">
@@ -78,10 +77,7 @@
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Desarrollador full-stack.</h3>
-            <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
-            </p>
+            <p class="fst-italic"> Como arquitecta y desarrolladora full stack, busco un nuevo desafío profesional que me permita combinar mi experiencia en ambos campos para crear soluciones virtuales innovadoras. Mi enfoque multidisciplinario y mi pasión por la creatividad me impulsan a encontrar formas únicas de integrar la arquitectura y el desarrollo de software para mejorar procesos y experiencias en el mundo virtual y físico. </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
@@ -98,10 +94,7 @@
                 </ul>
               </div>
             </div>
-            <p>
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
-            </p>
+            <p> Como desarrolladora full stack, mi objetivo es proporcionar un servicio integral que abarque tanto el desarrollo del front-end como del back-end, garantizando soluciones completas y eficientes para mis clientes.</p>
           </div>
         </div>
 
@@ -162,8 +155,7 @@
 
         <div class="section-title">
           <h2>Habilidades </h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-        </div>
+          <p>Como desarrolladora full stack, estoy versada en una amplia gama de herramientas que abarcan tanto el desarrollo del front-end como del back-end, así como la gestión eficiente de proyectos y la colaboración en equipos de desarrollo. Aquí hay una descripción más detallada de las herramientas que manejo:</p>
 
         <div class="row skills-content">
 
@@ -228,7 +220,7 @@
 
         <div class="section-title">
           <h2>Portafolio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p> A continuación, te presento algunos de los portales web que he desarrollado a lo largo de mi carrera como desarrolladora full stack.</p>
         </div>
 
         <div class="row">
@@ -292,7 +284,7 @@
 
         <div class="section-title">
           <h2>Servicios</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>A continuación, encontrarás algunos de los servicios a los que puedes acceder para obtener más detalles. Para otros servicios, no dudes en ponerte en contacto a través del formulario que se proporciona a continuación.</p>
         </div>
 
         <div class="row">
