Se modifican los textos de la sección servicios

--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Datos</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>Experiencia</h2>
+          <p>Como desarrolladora full stack JavaScript, he trabajado como freelance, donde he tenido la oportunidad de abordar proyectos diversos y desarrollar habilidades sólidas en el desarrollo de aplicaciones web. Aunque mi experiencia es relativamente breve, mi dedicación al aprendizaje continuo y mi capacidad para adaptarme rápidamente me han permitido obtener resultados significativos. Estoy entusiasmada por seguir creciendo en este campo y contribuir de manera innovadora a nuevos proyectos.</p>
         </div>
 
         <div class="row">
@@ -298,7 +298,8 @@
                 <i class="bx bxl-dribbble"></i>
               </div>
               <h4><a href="">Diseño personalizado</a></h4>
-              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+              <p>Creo soluciones intuitivas y atractivas.
+              </p>
             </div>
           </div>
 
@@ -311,7 +312,7 @@
                 <i class="bx bx-file"></i>
               </div>
               <h4><a href="">Soporte continuo</a></h4>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+              <p>Resolución eficiente de problemas y comunicación clara para garantizar la satisfacción del cliente.</p>
             </div>
           </div>
 
@@ -324,7 +325,7 @@
                 <i class="bx bx-tachometer"></i>
               </div>
               <h4><a href="">Analisis</a></h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+              <p>Identifico patrones y tendencias para mejorar proyectos.</p>
             </div>
           </div>
         </div>
